<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity = "center"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    android:id="@+id/RegisterActivity"
    tools:context=".General.RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Registration_tittle"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="40sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp" >
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="@string/Edit_name"
            android:paddingVertical="15dp"
            android:textColor="#000000"
            android:inputType="text"
            android:paddingLeft="60dp"
            android:background="@drawable/rounded_edit_text" />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/user"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp" >
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="@string/Edit_email"
            android:paddingVertical="15dp"
            android:textColor="#000000"
            android:inputType="textEmailAddress"
            android:paddingLeft="60dp"
            android:background="@drawable/rounded_edit_text" />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/email"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="@string/Edit_password"
            android:paddingVertical="15dp"
            android:textColor="#000000"
            android:inputType="textPassword"
            android:paddingLeft="60dp"
            android:background="@drawable/rounded_edit_text" />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/password"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">
        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="@string/Edit_confirm_password"
            android:paddingVertical="15dp"
            android:textColor="#000000"
            android:inputType="textPassword"
            android:paddingLeft="60dp"
            android:background="@drawable/rounded_edit_text"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/password"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true" />
    </RelativeLayout>
    <Button
        android:id="@+id/register"
        android:layout_width="600px"
        android:layout_height="65dp"
        android:layout_marginTop="30dp"
        android:text="@string/Registration_button"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:backgroundTint="#0099FF"
        android:background="@drawable/btn_layout"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_textView2"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/LinkSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="15dp"
            android:text="@string/question_textViewLink2"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>